--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <footer class="rodape">
         <div>
             <a href="https://instagram.com/vh.giovannetti"><img src="./assets/instagram.png" alt="Logo Instagram"></a>
-            <a href="https://github.com/xonion94"><img src="./assets/github.png" alt="Logo Github"></a>
+            <a href="https://github.com/victorgiovannetti"><img src="./assets/github.png" alt="Logo Github"></a>
             <a href="https://twitter.com/VictorGiovanne4"><img src="./assets/twitter.png" alt="Logo Twitter"></a>
         </div>
         <p>Desenvolvido por Victor Giovannetti</p>
